--- a/website/newsletter/270/index.mdx
+++ b/website/newsletter/270/index.mdx
@@ -111,10 +111,10 @@ Tzvetan Mikov from the Hermes team announced Hermes-node, a CLI version of Herme
 ---
 
 - 💸 [Amazon Developer – Build Fire TV apps with React Native on Vega OS. Port your apps, expand your reach, and monetize. ](https://fandf.co/3My3pHO)
-- 👀 [React Native PR \- CSS Grid is coming to React Native](https://github.com/facebook/react-native/pull/55665%20)
+- 👀 [React Native PR \- CSS Grid is coming to React Native](https://github.com/facebook/react-native/pull/55665)
 - 👀 [Keyboard Controller PR \- New `<KeyboardChatScrollView>` component](https://github.com/kirillzyusko/react-native-keyboard-controller/pull/1314) \- Eliminates re-layouts during keyboard animations to improve performance
 - 🐦 [Tanner Linsley announced](https://x.com/tannerlinsley/status/2024945690737254601) a PoC of TanStack Router running in React Native ([GitHub code](https://github.com/TanStack/router/compare/feat/react-native))
-- 🐦 [React Navigation 8 is experimenting with `<Activity>` for freezing and unmounting inactive screens](https://x.com/reactnavigation/status/2025525954618052746%20)
+- 🐦 [React Navigation 8 is experimenting with `<Activity>` for freezing and unmounting inactive screens](https://x.com/reactnavigation/status/2025525954618052746)
 - 🐦 [Jay Meistrich is testing Legend List v3 in production (Legend App), resulting in significant performance improvements](https://x.com/jmeistrich/status/2024455646368977393)
 - 📜 [Brownfield React Native app with multiple screens](https://adrov.me/brownfield-navigation/) \- Fixes a ReactFragment lifecycle race condition on Android and a static RN View Factory pattern on iOS \- both needed to avoid crashes when pushing multiple RN screens.
 - 📜 [The experience of adding E2E testing to React Native with Maestro](https://addjam.com/blog/2026-02-18/our-experience-adding-e2e-testing-react-native-maestro/) \- A case study on the benefits of using Maestro over Detox: simpler, platform-agnostic configuration, fewer technical quirks, and a lower barrier to entry.
